syntax = "proto3";

package emergencyRoom;

message PatientInfo {
  string name = 1;
  uint32 level = 2;
}

enum DoctorStatus {
  DOCTOR_STATUS_UNSPECIFIED = 0;
  DOCTOR_STATUS_UNAVAILABLE = 1;
  DOCTOR_STATUS_AVAILABLE = 2;
  DOCTOR_STATUS_ATTENDING = 3;
}

message DoctorInfo {
  string name = 1;
  uint32 max_level = 2;
}
